[workspace]

members = ["cosmos_client", "cosmos_core", "cosmos_server"]

# Fixed wgpu issue
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.17.3", default-features = false, features = [
    "reflect_auto_register"
] }
bevy_rapier3d = { git = "https://github.com/AnthonyTornetta/bevy_rapier", version = "0.31.0", branch = "master", features = [
    "simd-stable",
    "serde-serialize",
] }

bevy_app_compute = { git = "https://github.com/AnthonyTornetta/bevy_app_compute", branch = "no-build-worker", version = "0.17" }

renet = { git = "https://github.com/AnthonyTornetta/renet", branch = "cosmos", version = "1.2.0" }
renet_steam = { git = "https://github.com/AnthonyTornetta/renet", branch = "cosmos", version = "2.2.0" }
bevy_renet = { git = "https://github.com/AnthonyTornetta/renet", branch = "cosmos", version="3.0.0" }
renet_visualizer = { git = "https://github.com/AnthonyTornetta/renet", branch = "cosmos", version="1.1.0" }
# steamworks = "0.12"
serde = "1.0"
serde_json = "1.0"
bincode = "2.0"
noise = "0.9.0"
# Check out https://crates.io/crates/tinyrand in future
rand = "0.9"
rand_chacha = "0.9"
bigdecimal = "0.4.8"
rayon = "1.10"
futures-lite = "2.6"
image = { version = "0.25", default-features = false, features = ["png"] }
bevy-inspector-egui = "0.35.0"
crossterm = { version = "0.29", features = ["event-stream"] }
walkdir = "2.5"
toml = "0.8"
lz4_flex = "0.11"
bevy_kira_audio = "0.24.0"
anyhow = "1.0"
thiserror = "2.0"
bitflags = "2.10"
bevy_mod_debugdump = "0.14"
arboard = "3.6"
derive_more = "2.0.1"
clap = "4.5"
bytemuck = "1.22"
bevy_obj = "0.17.1"
bevy_hanabi = "0.17"
uuid = "1.18"
# iyes_perf_ui = "0.5"
bevy_transform_interpolation = "0.3.0"
bevy_framepace = "0.20"
# bevy_mod_billboard = "0.7.0"
rfd = "0.15.4"
cosmic-text = { version = "0.15", features = ["shape-run-cache"] }

# For any non workspace package
[profile.dev.package."*"]
opt-level = 3


# Makes rapier faster
[profile.release]
codegen-units = 1
