[workspace]

members = ["cosmos_client", "cosmos_core", "cosmos_server"]

# Fixed wgpu issue
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    "reflect_auto_register"
] }
bevy_rapier3d = { git = "https://github.com/AnthonyTornetta/bevy_rapier", rev = "6e7e7b79fb996fd51008bace578f9d16ddbd02e7", default-features = false, features = [
    "simd-stable",
    "serde-serialize",
    "dim3",
] }

bevy_app_compute = { git = "https://github.com/AnthonyTornetta/bevy_easy_compute", rev = "a20665078246c553878f75d1f17924c699fc4732" }

renet = { git = "https://github.com/AnthonyTornetta/renet", rev = "8ca21f825e3dd5b9cb3562ebac5b97affe400fd6" }
renet_steam = { git = "https://github.com/AnthonyTornetta/renet", rev = "8ca21f825e3dd5b9cb3562ebac5b97affe400fd6" }
bevy_renet = { git = "https://github.com/AnthonyTornetta/renet", rev = "8ca21f825e3dd5b9cb3562ebac5b97affe400fd6" }
renet_visualizer = { git = "https://github.com/AnthonyTornetta/renet", rev = "8ca21f825e3dd5b9cb3562ebac5b97affe400fd6" }
steamworks = "0.12.2"
serde = "1.0"
serde_json = "1.0"
bincode = "2.0"
noise = "0.9.0"
# Check out https://crates.io/crates/tinyrand in future
rand = "0.10"
rand_chacha = "0.10"
bigdecimal = "0.4.10"
rayon = "1.12"
futures-lite = "2.6"
image = { version = "0.25", default-features = false, features = ["png"] }
bevy-inspector-egui = "0.36.0"
crossterm = { version = "0.29", features = ["event-stream"] }
walkdir = "2.5"
toml = "1"
lz4_flex = "0.13"
bevy_kira_audio = "0.25.0"
anyhow = "1.0"
thiserror = "2.0"
bitflags = "2.11"
bevy_mod_debugdump = "0.15"
arboard = "3.6"
derive_more = "2.1"
clap = "4.6"
bytemuck = "1.25"
bevy_obj = "0.18.2"
bevy_hanabi = "0.18"
uuid = "1.23"
# iyes_perf_ui = "0.5"
bevy_transform_interpolation = "0.4.0"
bevy_framepace = "0.21"
# bevy_mod_billboard = "0.7.0"
rfd = "0.17.2"
cosmic-text = { version = "0.19", features = ["shape-run-cache"] }
bevy_ui_text_input = "0.7.0"
trash = "5.2.6"
dircpy = "0.3.20"
zip = "2.2.2"
chrono = "0.4.44"
base64 = "0.22.1"
itertools = "0.14.0"

# For any non workspace package
[profile.dev.package."*"]
opt-level = 3


# Makes rapier faster
[profile.release]
codegen-units = 1
