[package]
name = "cosmos_client"
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
print-schedule = []

# Bevy defaults minus audio and some other not needed things
# see https://github.com/bevyengine/bevy/blob/main/Cargo.toml#L31-L54
# from https://github.com/NiklasEi/bevy_game_template/blob/main/Cargo.toml
default = [
    "bevy/animation",
    "bevy/bevy_asset",
    "bevy/bevy_state",
    "bevy/bevy_color",
    "bevy/bevy_gilrs",
    "bevy/bevy_scene",
    "bevy/bevy_winit",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    "bevy/bevy_gltf",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_ui",
    "bevy/multi_threaded",
    "bevy/png",
    "bevy/hdr",
    "bevy/x11",
    "bevy/bevy_gizmos",
    "bevy/android_shared_stdcxx",
    "bevy/tonemapping_luts",
    "bevy/smaa_luts",
    "bevy/default_font",
    "bevy/webgl2",
    "bevy/sysinfo_plugin",
]

[dependencies]
cosmos_core = { version = "0.0.6", path = "../cosmos_core", features = [
    "client",
] }

bevy = { workspace = true }
bevy_renet2 = { workspace = true, features = ["serde"] }
renet2 = { workspace = true, features = ["bevy", "serde"] }
serde = { workspace = true }
bincode = { workspace = true }
local-ip-address = { workspace = true }
bevy_rapier3d = { workspace = true }
bigdecimal = { workspace = true }
futures-lite = { workspace = true }
noise = { workspace = true }

serde_json = { workspace = true }
image = { workspace = true }
bytemuck = { workspace = true }

bevy-inspector-egui = { workspace = true }

rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
bevy_kira_audio = { workspace = true }

toml = { workspace = true }
arboard = { workspace = true }

thread-priority = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
bevy_mod_debugdump = { workspace = true }
derive_more = { workspace = true }
clap = { workspace = true, features = ["derive"] }
bevy_app_compute = { workspace = true }
bevy_obj = { workspace = true }
# bevy_hanabi = { workspace = true }
