[package]
name = "cosmos_client"
version = "0.0.8"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
print-schedule = []

# Bevy defaults minus audio and some other not needed things
# see https://github.com/bevyengine/bevy/blob/main/Cargo.toml#L31-L54
# from https://github.com/NiklasEi/bevy_game_template/blob/main/Cargo.toml
default = [
    "bevy/bevy_picking",
    "bevy/animation",
    "bevy/bevy_asset",
    "bevy/bevy_state",
    "bevy/bevy_color",
    "bevy/bevy_gilrs",
    "bevy/bevy_scene",
    "bevy/bevy_winit",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    "bevy/bevy_gltf",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_post_process",
    "bevy/bevy_ui_render",
    "bevy/multi_threaded",
    "bevy/png",
    "bevy/hdr",
    "bevy/x11",
    "bevy/bevy_gizmos",
    "bevy/android_shared_stdcxx",
    "bevy/tonemapping_luts",
    "bevy/smaa_luts",
    "bevy/default_font",
    "bevy/webgl2",
    "bevy/sysinfo_plugin",
    "bevy/bevy_window",
    "bevy/std", 
    "bevy/bevy_log",
    "bevy/async_executor",
    "bevy/bevy_input_focus"
]

[dependencies]
cosmos_core = { version = "0.0.8", path = "../cosmos_core", features = [
    "client",
] }

bevy = { workspace = true }
bevy_renet = { workspace = true, features = [ "steam" ] }
renet_steam = { workspace = true, features = [ "bevy" ] }
# steamworks = { workspace = true }
renet = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true, features = [ "serde" ] }
bevy_rapier3d = { workspace = true }
bigdecimal = { workspace = true }
futures-lite = { workspace = true }
noise = { workspace = true }

serde_json = { workspace = true }
image = { workspace = true }
bytemuck = { workspace = true }

bevy-inspector-egui = { workspace = true }

rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
bevy_kira_audio = { workspace = true }

toml = { workspace = true }
arboard = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
bevy_mod_debugdump = { workspace = true }
derive_more = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive"] }
bevy_app_compute = { workspace = true }
bevy_obj = { workspace = true }
bevy_hanabi = { workspace = true }
uuid = { workspace = true }
bevy_transform_interpolation = { workspace = true }
rfd = { workspace = true }
cosmic-text = { workspace = true }
walkdir = { workspace = true }
trash = "5.2.5"
# iyes_perf_ui = { workspace = true }
# bevy_mod_billboard = { workspace = true }
