[package]
name = "cosmos_client"
version = "0.0.8"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
print-schedule = []

extra-build-checks = [
    "cosmos_core/extra-build-checks"
]

# Bevy defaults minus audio and some other not needed things
# see https://github.com/bevyengine/bevy/blob/main/Cargo.toml#L31-L54
# from https://github.com/NiklasEi/bevy_game_template/blob/main/Cargo.toml
default = [
    "bevy/ui",
    "bevy/3d"
]

[dependencies]
cosmos_core = { version = "0.0.8", path = "../cosmos_core", features = [
    "client",
] }

bevy = { workspace = true }
bevy_renet = { workspace = true, features = [ "steam" ] }
renet_steam = { workspace = true }
# steamworks = { workspace = true }
renet = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true, features = [ "serde" ] }
bevy_rapier3d = { workspace = true }
bigdecimal = { workspace = true }
futures-lite = { workspace = true }
noise = { workspace = true }

serde_json = { workspace = true }
image = { workspace = true }
bytemuck = { workspace = true }

bevy-inspector-egui = { workspace = true }

rand = { workspace = true }
rand_chacha = { workspace = true }
rayon = { workspace = true }
bevy_kira_audio = { workspace = true }

toml = { workspace = true }
arboard = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
bevy_mod_debugdump = { workspace = true }
derive_more = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive"] }
bevy_app_compute = { workspace = true }
bevy_obj = { workspace = true }
bevy_hanabi = { workspace = true }
uuid = { workspace = true }
bevy_transform_interpolation = { workspace = true }
rfd = { workspace = true }
cosmic-text = { workspace = true }
walkdir = { workspace = true }
trash = { workspace = true }
bevy_ui_text_input = { workspace = true }
steamworks = { workspace = true, features = [ "serde" ] }
base64 = { workspace = true }
itertools = { workspace = true }

# iyes_perf_ui = { workspace = true }
# bevy_mod_billboard = { workspace = true }
