[package]
name = "cosmos_core"
version = "0.0.8"
edition = "2024"

[features]
server = []
client = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Bevy defaults minus audio and some other not needed things
# see https://github.com/bevyengine/bevy/blob/main/Cargo.toml#L58-L85
# based on https://github.com/NiklasEi/bevy_game_template/blob/main/Cargo.toml
default = [
    "bevy/bevy_asset",
    "bevy/bevy_state",
    # "bevy/x11",
    # "bevy/bevy_color",
    # "bevy/bevy_winit",
    # "bevy/bevy_core_pipeline",
    # "bevy/bevy_gizmos",
    "bevy/sysinfo_plugin",
    "bevy/std", 
    "bevy/bevy_log",
    "bevy/async_executor",
    "bevy/debug"
]
[dependencies]
bevy = { workspace = true }
bevy_renet = { workspace = true, features = [ "steam" ] }
renet_steam = { workspace = true }
# steamworks = { workspace = true }
renet = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true, features = [ "serde" ] }
bigdecimal = { workspace = true }
noise = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
bevy_app_compute = { workspace = true }
bytemuck = { workspace = true }
bevy_rapier3d = { workspace = true }
rayon = { workspace = true }
lz4_flex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
derive_more = { workspace = true, features = ["full"] }
uuid = { workspace = true }
bevy_transform_interpolation = { workspace = true }
