[package]
name = "cosmos_core"
version = "0.0.8"
edition = "2024"

[features]
server = []
client = []
# Used for checks that trip up the LSP (since it assumes "server" and "client" are always both enabled)
# This WILL be enabled in a release build that gets put on steam, and should ONLY be used for compile-time checks.
extra-build-checks = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Bevy defaults minus audio and some other not needed things
# see https://github.com/bevyengine/bevy/blob/main/Cargo.toml#L58-L85
# based on https://github.com/NiklasEi/bevy_game_template/blob/main/Cargo.toml
default = [
"bevy/bevy_asset",
    "bevy/bevy_state",
    "bevy/bevy_winit",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    "bevy/bevy_render",
    "bevy/multi_threaded",
    "bevy/x11",
    "bevy/sysinfo_plugin",
    "bevy/bevy_window",
    "bevy/std", 
    "bevy/bevy_log",
    "bevy/async_executor",
    "bevy/zstd_rust"
]

[dependencies]
bevy = { workspace = true }
bevy_renet = { workspace = true, features = [ "steam" ] }
renet_steam = { workspace = true }
# steamworks = { workspace = true }
renet = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true, features = [ "serde" ] }
bigdecimal = { workspace = true }
noise = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
bevy_app_compute = { workspace = true }
bytemuck = { workspace = true }
bevy_rapier3d = { workspace = true }
rayon = { workspace = true }
lz4_flex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
derive_more = { workspace = true, features = ["full"] }
uuid = { workspace = true }
bevy_transform_interpolation = { workspace = true }
steamworks = { workspace = true, features = [ "serde" ] }
