[package]
name = "cosmos_server"
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
print-schedule = []


# Bevy defaults minus audio and some other not needed things
# see https://github.com/bevyengine/bevy/blob/main/Cargo.toml#L58-L85
# based on https://github.com/NiklasEi/bevy_game_template/blob/main/Cargo.toml
default = [
    "bevy/animation",
    "bevy/bevy_asset",
    "bevy/bevy_state",
    "bevy/bevy_color",
    "bevy/bevy_gilrs",
    "bevy/bevy_scene",
    "bevy/bevy_winit",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    "bevy/bevy_gltf",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_ui",
    "bevy/multi_threaded",
    "bevy/png",
    "bevy/hdr",
    "bevy/x11",
    "bevy/bevy_gizmos",
    "bevy/android_shared_stdcxx",
    "bevy/tonemapping_luts",
    "bevy/smaa_luts",
    "bevy/default_font",
    "bevy/webgl2",
    "bevy/sysinfo_plugin",
]

[dependencies]
cosmos_core = { version = "0.0.6", path = "../cosmos_core", features = [
    "server",
] }

bevy = { workspace = true }
bevy_renet = { workspace = true, features = ["serde"] }
serde = { workspace = true }
bincode = { workspace = true }
noise = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
local-ip-address = { workspace = true }
clap = { workspace = true, features = ["derive"] }

bevy_rapier3d = { workspace = true }
crossterm = { workspace = true }
renet_visualizer = { workspace = true }
futures-lite = { workspace = true }
serde_json = { workspace = true }

rayon = { workspace = true }

bevy-inspector-egui = { workspace = true }

walkdir = { workspace = true }

thread-priority = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
bevy_mod_debugdump = { workspace = true }
derive_more = { workspace = true }

bevy_app_compute = { workspace = true }
bytemuck = { workspace = true }
