[package]
name = "cosmos_server"
version = "0.0.8"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
print-schedule = []

extra-build-checks = [
    "cosmos_core/extra-build-checks"
]

# Bevy defaults minus audio and some other not needed things
# see https://github.com/bevyengine/bevy/blob/main/Cargo.toml#L58-L85
# based on https://github.com/NiklasEi/bevy_game_template/blob/main/Cargo.toml
default = [
    "bevy/bevy_asset",
    "bevy/bevy_state",
    "bevy/bevy_winit",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    "bevy/bevy_render",
    "bevy/multi_threaded",
    "bevy/x11",
    "bevy/sysinfo_plugin",
    "bevy/bevy_window",
    "bevy/std", 
    "bevy/bevy_log",
    "bevy/async_executor",
    "bevy/zstd_rust"
]

[dependencies]
cosmos_core = { version = "0.0.8", path = "../cosmos_core", features = [
    "server",
] }

bevy = { workspace = true }
bevy_renet = { workspace = true, features = [ "steam" ] }
steamworks = { workspace = true, features = [ "serde" ] }
renet_steam = { workspace = true }
renet = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true, features = [ "serde" ]}
noise = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
clap = { workspace = true, features = ["derive"] }

bevy_rapier3d = { workspace = true }

crossterm = { workspace = true }
renet_visualizer = { workspace = true, features = ["bevy"] }
futures-lite = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

rayon = { workspace = true }

bevy-inspector-egui = { workspace = true }
walkdir = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
bevy_mod_debugdump = { workspace = true }
derive_more = { workspace = true, features = ["full"] }
uuid = { workspace = true }
bevy_framepace = { workspace = true }
bevy_app_compute = { workspace = true }
bytemuck = { workspace = true }
dircpy = { workspace = true }
zip = { workspace = true }
chrono = { workspace = true }
# iyes_perf_ui = { workspace = true }
